--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"> -->
 </head>
 <body>
     
@@ -45,12 +44,16 @@
     <section class="home flex-center" id="home">
         <div class="home-container">
             <div class="media-icons">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="http://www.facebook.com/profile.php?id=100094992227168&mibextid=2JQ9oc">
+                    <i class="fab fa-facebook"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/hermas-francisco"><i class="fab fa-linkedin"></i></a>
+                <a href="http://x.com/F_hermas22"><i class="fab fa-x-twitter"></i></a>
+                <a href="https://github.com/fhermas22"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/f.hermas22"><i class="fab fa-instagram"></i></a>
+                <a href="http://www.youtube.com/@Hernotix_World/?sub_confirmation=1">
+                    <i class="fab fa-youtube"></i>
+                </a>
             </div>
             <div class="info">
                 <h2>Salut, je suis Hermas</h2>
@@ -245,7 +248,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="education">
+                    <!-- <div class="education">
                         <h4><label>Récompenses</label></h4>
                         <ul class="edu-list">
                             <li class="item">
@@ -261,7 +264,7 @@
                                 <p><span>Meilleur Freelancer</span> - Fiver & Upwork</p>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="skills-description">
                     <h3>Travaux & Expériences</h3>
@@ -576,8 +579,8 @@
     <!--=======Portfolio section=======-->
     <section class="portfolio section" id="portfolio">
         <div class="container flex-center">
-            <h1 class="section-title-01">Mon Portfolio - Réalisations</h1>
-            <h2 class="section-title-02">Mon Portfolio - Réalisations</h2>
+            <h1 class="section-title-01">Mon Portfolio</h1>
+            <h2 class="section-title-02">Mon Portfolio</h2>
             <div class="content">
                 <div class="portfolio-list">
                     <div class="img-card-container">
@@ -876,22 +879,26 @@
                 <h3>Suivez-moi</h3>
             <ul>
                 <li>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="http://www.facebook.com/profile.php?id=100094992227168&mibextid=2JQ9oc">
+                        <i class="fab fa-facebook"></i>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/hermas-francisco"><i class="fab fa-linkedin"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="http://x.com/F_hermas22"><i class="fab fa-x-twitter"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/fhermas22"><i class="fab fa-github"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/f.hermas22"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="http://www.youtube.com/@Hernotix_World/?sub_confirmation=1">
+                        <i class="fab fa-youtube"></i>
+                    </a>
                 </li>
             </ul>
             </div>
