--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HERMAS - Portfolio</title>
+
+    <!--======= Favicon =======-->
+    <link rel="icon" href="/images/favicon-images/favicon.ico" type="image/vnd.icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon-images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    <!--======= CSS Resources =======-->
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
