Modification des liens de réseaux sociaux; Modifications des titres; Ajout d'action aux boutons; Organisation du footer

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HERMAS - Portfolio</title>
-
     <!--======= Favicon =======-->
     <link rel="icon" href="images/favicon-images/favicon.ico" type="image/vnd.icon">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon-images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-images/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-
     <!--======= CSS Resources =======-->
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -33,7 +31,7 @@
     <!--=======Header=======-->
     <header>
         <div class="nav-bar">
-            <a href="#" class="logo">Hermas</a>
+            <a href="#home" class="logo">Hermas</a>
             <div class="navigation">
                 <div class="nav-items">
                     <div class="nav-close-btn"></div>
@@ -41,7 +39,7 @@
                     <a href="#about">À Propos</a>
                     <a href="#skills">Compétences</a>
                     <a href="#services">Services</a>
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="#portfolio">Projets</a>
                     <a href="#contact">Contact</a>
                 </div>
             </div>
@@ -53,15 +51,16 @@
     <section class="home flex-center" id="home">
         <div class="home-container">
             <div class="media-icons">
-                <a href="http://www.facebook.com/profile.php?id=100094992227168&mibextid=2JQ9oc">
+                <a href="http://www.facebook.com/profile.php?id=100094992227168&mibextid=2JQ9oc" target="_blank">
                     <i class="fab fa-facebook"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/hermas-francisco"><i class="fab fa-linkedin"></i></a>
-                <a href="http://x.com/F_hermas22"><i class="fab fa-x-twitter"></i></a>
-                <a href="https://github.com/fhermas22"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/f.hermas22"><i class="fab fa-instagram"></i></a>
-                <a href="http://www.youtube.com/@Hernotix_World/?sub_confirmation=1">
-                    <i class="fab fa-youtube"></i>
+                <a href="https://www.linkedin.com/in/hermas-francisco" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="http://x.com/F_hermas22" target="_blank"><i class="fab fa-x-twitter"></i></a>
+                <a href="https://github.com/fhermas22" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="http://wa.me/2290169353860" target="_blank">
+                    <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
             <div class="info">
@@ -72,7 +71,7 @@
                     le Développement Web front-end et back-end, Maintenance Informatique & Mobile, 
                     Récupération de Données, pour répondre aux besoins de mes clients.
                 </p>
-                <a href="" class="btn">Contactez Moi <i class="fas fa-arrow-circle-right"></i></a>
+                <a href="#contact-right" class="btn">Contactez Moi <i class="fas fa-arrow-circle-right"></i></a>
             </div>
             <div class="home-img">
                 <img src="images/my-images/main-img.png" alt="Photo de Hermas">
@@ -121,7 +120,7 @@
                             <span>Projets <br>Réussis</span>
                         </li>
                     </ul>
-                    <a href="" class="btn">Télécharger CV <i class="fas fa-download"></i></a>
+                    <a href="" class="btn">Télécharger mon CV <i class="fas fa-download"></i></a>
                 </div>
             </div>
         </div>
@@ -588,8 +587,8 @@
     <!--=======Portfolio section=======-->
     <section class="portfolio section" id="portfolio">
         <div class="container flex-center">
-            <h1 class="section-title-01">Mon Portfolio</h1>
-            <h2 class="section-title-02">Mon Portfolio</h2>
+            <h1 class="section-title-01">Projets Réalisés</h1>
+            <h2 class="section-title-02">Projets Réalisés</h2>
             <div class="content">
                 <div class="portfolio-list">
                     <div class="img-card-container">
@@ -738,7 +737,7 @@
                             <h2>Prochain Projet</h2>
                         </div>
                         <div class="contact-btn">
-                            <a href="" class="btn">Prenez Contact <i class="fas fa-paper-plane"></i></a>
+                            <a href="#contact-right" class="btn">Prenez Contact <i class="fas fa-paper-plane"></i></a>
                         </div>
                     </div>
                 </div>
@@ -748,8 +747,8 @@
         <!--=======Our Clients=======-->
         <div class="our-client sub-section">
             <div class="container flex-center">
-                <h1 class="section-title-01">Mes Clients</h1>
-                <h2 class="section-title-02">Mes Clients</h2>
+                <h1 class="section-title-01">Témoignages Clients</h1>
+                <h2 class="section-title-02">Témoignages Clients</h2>
                 <div class="content">
                     <div class="swiper client-swiper">
                         <div class="swiper-wrapper">
@@ -840,7 +839,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="contact-right">
+                <div class="contact-right" id="contact-right">
                     <p>
                         Je suis toujours disponible pour discuter de <!-- <br> -->
                         <span>projets innovants ou d’opportunités de collaboration</span>.
@@ -873,9 +872,9 @@
                 <p>Programmeur Informatique</p>
                 <a href="#about">À Propos de Moi</a>
             </div>
-            <div class="hr"></div>
+            <div class="hr" id="start-hr"></div>
             <div class="info group">
-                <h3>Accès Rapide</h3>
+                <h3>Liens Utiles</h3>
                 <ul>
                     <li><a href="#skills">Compétences</a></li>
                     <li><a href="#services">Services</a></li>
@@ -883,30 +882,34 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <div class="hr"></div>
+            <div class="hr" id="end-hr"></div>
             <div class="follow group">
                 <h3>Suivez-moi</h3>
             <ul>
                 <li>
-                    <a href="http://www.facebook.com/profile.php?id=100094992227168&mibextid=2JQ9oc">
+                    <a href="http://www.facebook.com/profile.php?id=100094992227168&mibextid=2JQ9oc" target="_blank">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/hermas-francisco"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/hermas-francisco" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
                 </li>
                 <li>
-                    <a href="http://x.com/F_hermas22"><i class="fab fa-x-twitter"></i></a>
+                    <a href="http://x.com/F_hermas22" target="_blank"><i class="fab fa-x-twitter"></i></a>
                 </li>
                 <li>
-                    <a href="https://github.com/fhermas22"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/fhermas22" target="_blank"><i class="fab fa-github"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/f.hermas22"><i class="fab fa-instagram"></i></a>
-                </li>
-                <li>
-                    <a href="http://www.youtube.com/@Hernotix_World/?sub_confirmation=1">
+                    <a href="http://www.youtube.com/@Hernotix_World/?sub_confirmation=1" target="_blank">
                         <i class="fab fa-youtube"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://wa.me/2290169353860" target="_blank">
+                        <i class="fab fa-whatsapp"></i>
                     </a>
                 </li>
             </ul>
