Quelques ajustements sur le footer et sur les boutons de contact

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     le Développement Web front-end et back-end, Maintenance Informatique & Mobile, 
                     Récupération de Données, pour répondre aux besoins de mes clients.
                 </p>
-                <a href="#contact-right" class="btn">Contactez Moi <i class="fas fa-arrow-circle-right"></i></a>
+                <a href="#contact" class="btn">Contactez Moi <i class="fas fa-arrow-circle-right"></i></a>
             </div>
             <div class="home-img">
                 <img src="images/my-images/main-img.png" alt="Photo de Hermas">
@@ -737,7 +737,7 @@
                             <h2>Prochain Projet</h2>
                         </div>
                         <div class="contact-btn">
-                            <a href="#contact-right" class="btn">Prenez Contact <i class="fas fa-paper-plane"></i></a>
+                            <a href="#contact" class="btn">Prenez Contact <i class="fas fa-paper-plane"></i></a>
                         </div>
                     </div>
                 </div>
@@ -839,7 +839,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="contact-right" id="contact-right">
+                <div class="contact-right">
                     <p>
                         Je suis toujours disponible pour discuter de <!-- <br> -->
                         <span>projets innovants ou d’opportunités de collaboration</span>.
