--- a/index.html
+++ b/index.html
@@ -610,6 +610,14 @@
                                     minus nobis excepturi id repellendus assumenda vel iusto. Deleniti 
                                     cupiditate praesentium laborum ipsa sapiente fugit consequatur minus.
                                 </p>
+                                <ul class="visit-project-btns">
+                                    <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -632,6 +640,14 @@
                                     minus nobis excepturi id repellendus assumenda vel iusto. Deleniti 
                                     cupiditate praesentium laborum ipsa sapiente fugit consequatur minus.
                                 </p>
+                                <ul class="visit-project-btns">
+                                    <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -654,6 +670,14 @@
                                     minus nobis excepturi id repellendus assumenda vel iusto. Deleniti 
                                     cupiditate praesentium laborum ipsa sapiente fugit consequatur minus.
                                 </p>
+                                <ul class="visit-project-btns">
+                                    <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -673,9 +697,16 @@
                                 <img src="images/portfolio-images/port-img4.jpg" alt="">
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sunt 
-                                    minus nobis excepturi id repellendus assumenda vel iusto. Deleniti 
-                                    cupiditate praesentium laborum ipsa sapiente fugit consequatur minus.
+                                    minus nobis excepturi id repellendus assumenda vel iusto.
                                 </p>
+                                <ul class="visit-project-btns">
+                                    <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -695,9 +726,16 @@
                                 <img src="images/portfolio-images/port-img5.jpg" alt="">
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sunt 
-                                    minus nobis excepturi id repellendus assumenda vel iusto. Deleniti 
-                                    cupiditate praesentium laborum ipsa sapiente fugit consequatur minus.
+                                    minus nobis excepturi id repellendus assumenda vel iusto.
                                 </p>
+                                <ul class="visit-project-btns">
+                                    <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -717,9 +755,16 @@
                                 <img src="images/portfolio-images/port-img6.jpg" alt="">
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sunt 
-                                    minus nobis excepturi id repellendus assumenda vel iusto. Deleniti 
-                                    cupiditate praesentium laborum ipsa sapiente fugit consequatur minus.
+                                    minus nobis excepturi id repellendus assumenda vel iusto.
                                 </p>
+                                <ul class="visit-project-btns">
+                                    <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
