Modification et Ajustement du contenu de la section Services

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HERMAS - Portfolio</title>
+    <title>HERMAS. - Portfolio</title>
     <!--======= Favicon =======-->
     <link rel="icon" href="images/favicon-images/favicon.ico" type="image/vnd.icon">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon-images/apple-touch-icon.png">
@@ -14,6 +14,17 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
+    <!-- Start of Async Callbell Code -->
+    <!-- <script>
+        if (!window.callbellSettings) {
+        window.callbellSettings = {}
+        }
+        window.callbellSettings["token"] = "sY1qHzsUewH4gVuzG52QLaK5";
+    </script>
+    <script>
+        (function(){var w=window;var ic=w.callbell;if(typeof ic==="function"){ic('reattach_activator');ic('update',callbellSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Callbell=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://dash.callbell.eu/include/'+window.callbellSettings.token+'.js';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()
+    </script> -->
+   <!-- End of Async Callbell Code -->
 </head>
 <body>
     
@@ -31,7 +42,7 @@
     <!--=======Header=======-->
     <header>
         <div class="nav-bar">
-            <a href="#home" class="logo">Hermas</a>
+            <a href="#home" class="logo">Hermas.</a>
             <div class="navigation">
                 <div class="nav-items">
                     <div class="nav-close-btn"></div>
@@ -378,8 +389,7 @@
                                 <p>
                                     La maintenance informatique englobe l'ensemble des interventions 
                                     nécessaires pour garantir le bon fonctionnement de vos équipements 
-                                    informatiques. De l'installation à la réparation, en passant par 
-                                    l'optimisation, je veille à la santé et aux performances de vos 
+                                    informatiques. Je veille à la santé et aux performances de vos 
                                     ordinateurs.
                                 </p>
                                 <h4>Ce que je propose :</h4>
@@ -393,17 +403,11 @@
                                         Installation et Configuration de logiciels professionnels
                                     </li>
                                     <li>
-                                        <i class="fas fa-check-circle"></i> Optimisation des performances
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-check-circle"></i> Protection antivirus
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-check-circle"></i> Entretien préventif
+                                        <i class="fas fa-check-circle"></i> Optimisation des performances & Protection antivirus
                                     </li>
                                     <li>
                                         <i class="fas fa-check-circle"></i> 
-                                        Réparation matérielle et logicielle
+                                        Réparation matérielle et logicielle & Entretien préventif
                                     </li>
                                     <li>
                                         <i class="fas fa-check-circle"></i> 
@@ -424,12 +428,11 @@
                         <div class="service-modal flex-center">
                             <div class="service-modal-body">
                                 <i class="fas fa-times modal-close-btn"></i>
-                                <h3>Services Mobiles (Maintenance GSM)</h3>
-                                <h4>C'est quoi les Services Mobiles ?</h4>
+                                <h3>Services Mobiles</h3>
+                                <h4>C'est quoi les Services Mobiles (GSM) ?</h4>
                                 <p>
                                     Les services mobiles couvrent tous les aspects de la maintenance et 
-                                    réparation de vos smartphones et tablettes. De la réparation d'écran 
-                                    à la récupération après dégât des eaux, j'assure une prise en charge 
+                                    réparation de vos smartphones et tablettes. J'assure une prise en charge 
                                     complète de vos appareils mobiles pour leur donner une seconde vie.
                                 </p>
                                 <h4>Ce que je propose :</h4>
@@ -456,15 +459,7 @@
                                     </li>
                                     <li>
                                         <i class="fas fa-check-circle"></i> 
-                                        Formation et assistance utilisateur
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-check-circle"></i> 
-                                        Installation d'applications PRO
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-check-circle"></i> 
-                                        Installation de jeux Premium
+                                        Installation d'applications PRO & Jeux Premium
                                     </li>
                                 </ul>
                             </div>
@@ -472,7 +467,44 @@
                     </li>
                     <li class="service-container">
                         <div class="service-card">
-                            <i class="fas fa-box"></i>
+                            <i class="fas fa-floppy-disk"></i>
+                            <h3>Récupération de Données</h3>
+                            <div class="learn-more-btn">
+                                En savoir plus <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+                        </div>
+                        <div class="service-modal flex-center">
+                            <div class="service-modal-body">
+                                <i class="fas fa-times modal-close-btn"></i>
+                                <h3>Récupération de Données</h3>
+                                <h4>Qu'est ce que le Récupération de Données ?</h4>
+                                <p>
+                                    La Récupération de Données consiste à l'application de méthodes 
+                                    spécifiques pour récupérer des données sur des supports de stockage 
+                                    endommagés même à état critique, et aussi à la réparation au niveau 
+                                    logiciel de ces supports.
+                                </p>
+                                <h4>Ce que je propose :</h4>
+                                <ul>
+                                    <li>
+                                        <i class="fas fa-check-circle"></i> 
+                                        Récupération de données sur supports de stockage (disques durs, 
+                                        clés USB et cartes mémoire)
+                                    </li>
+                                    <li><i class="fas fa-check-circle"></i> 
+                                        Analyse et extraction sécurisée des données
+                                    </li>
+                                    <li><i class="fas fa-check-circle"></i> 
+                                        Réparation de supports de stockage endommagés (côté logiciel)
+                                    </li>
+                                    <li><i class="fas fa-check-circle"></i> Conseil technique personnalisé</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="service-container">
+                        <div class="service-card">
+                            <i class="fas fa-cart-shopping"></i>
                             <h3>E-Commerce</h3>
                             <div class="learn-more-btn">
                                 En savoir plus <i class="fas fa-long-arrow-alt-right"></i>
@@ -481,15 +513,13 @@
                         <div class="service-modal flex-center">
                             <div class="service-modal-body">
                                 <i class="fas fa-times modal-close-btn"></i>
-                                <h3>E-Commerce & Importation</h3>
+                                <h3>E-Commerce</h3>
                                 <h4>Qu'est ce que je fournit en matière d'E-Commerce ?</h4>
                                 <p>
                                     En tant que e-commerçant spécialisé dans l'électronique grand public et 
                                     l'informatique, je propose une sélection de produits de qualité 
                                     accompagnée d'un service conseil personnalisé pour vous guider dans vos 
-                                    achats technologiques chez nous. Également, si vous voulez commander 
-                                    depuis la Chine, des produits en gros et en détail, à des prix d'usine
-                                    très avantageux, je m'occupe pour vous de toutes les formalités de A à Z.           
+                                    achats technologiques chez nous.           
                                 </p>
                                 <h4>Ce que je propose :</h4>
                                 <ul>
@@ -503,20 +533,52 @@
                                         <i class="fas fa-check-circle"></i> Accessoires mobiles
                                     </li>
                                     <li>
-                                        <i class="fas fa-check-circle"></i> 
-                                        Importation de tout type de produit depuis la Chine vers le Bénin
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-check-circle"></i> Conseil personnalisé à l'achat
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-check-circle"></i> Service après-vente
-                                    </li>
-                                    <li>
                                         <i class="fas fa-check-circle"></i> Garantie produits
                                     </li>
                                     <li>
-                                        <i class="fas fa-check-circle"></i> Assistance technique
+                                        <i class="fas fa-check-circle"></i> Service après-vente & Assistance technique
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="service-container">
+                        <div class="service-card">
+                            <i class="fas fa-box"></i>
+                            <h3>Importation de Produits</h3>
+                            <div class="learn-more-btn">
+                                En savoir plus <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+                        </div>
+                        <div class="service-modal flex-center">
+                            <div class="service-modal-body">
+                                <i class="fas fa-times modal-close-btn"></i>
+                                <h3>Importation de Produits</h3>
+                                <h4>C'est quoi l'Importation de Produits ?</h4>
+                                <p>
+                                    L'Importation de Produits consiste tout simplement à se procurer tout 
+                                    type de produits d'un autre pays vers le vôtre. Donc, si vous voulez 
+                                    commander depuis la Chine, des produits en gros et en détail, à des prix 
+                                    d'usine très avantageux, dans le but de les revendre ici ou pour votre 
+                                    utilisation personnel, je m'occupe pour vous de toutes les formalités 
+                                    de A à Z.
+                                </p>
+                                <h4>Ce que je propose :</h4>
+                                <ul>
+                                    <li>
+                                        <i class="fas fa-check-circle"></i> 
+                                        Importation de produits depuis la Chine vers le Bénin
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check-circle"></i> 
+                                        Recherche des meilleurs fournisseurs pour chaque produit
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check-circle"></i> 
+                                        Supervision du transit (transport) et Suivi des colis
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check-circle"></i> Conseil personnalisé à l'achat
                                     </li>
                                 </ul>
                             </div>
@@ -545,15 +607,6 @@
                                 <ul>
                                     <li>
                                         <i class="fas fa-check-circle"></i> 
-                                        Récupération de Données sur supports de stockage (disques durs, 
-                                        clés USB, cartes mémoire)
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-check-circle"></i> 
-                                        Réparation de supports de stockage endommagés (côté logiciel)
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-check-circle"></i> 
                                         Création graphique simple (Pseudo-Logos & Images Illustratives 
                                         Personnalisées)
                                     </li>
@@ -570,15 +623,36 @@
                                         <i class="fas fa-check-circle"></i> 
                                         Achat de Livres & Guides électroniques à moindre coût
                                     </li>
-                                    <li>
-                                        <i class="fas fa-check-circle"></i> 
-                                        Musiques Esthétiques Libre-de-Droits pour vos Vidéos et 
-                                        pour vous Relaxer
-                                    </li>
                                 </ul>
                             </div>
                         </div>
                     </li>
+                    <!-- <li class="service-container">
+                        <div class="service-card">
+                            <i class="fas fa-apper"></i>
+                            <h3>...</h3>
+                            <div class="learn-more-btn">
+                                En savoir plus <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+                        </div>
+                        <div class="service-modal flex-center">
+                            <div class="service-modal-body">
+                                <i class="fas fa-times modal-close-btn"></i>
+                                <h3>....</h3>
+                                <h4>Qu'est ce que le ... ?</h4>
+                                <p>
+                                    ...
+                                </p>
+                                <h4>Ce que je propose :</h4>
+                                <ul>
+                                    <li><i class="fas fa-check-circle"></i> ...</li>
+                                    <li><i class="fas fa-check-circle"></i> ...</li>
+                                    <li><i class="fas fa-check-circle"></i> ...</li>
+                                    <li><i class="fas fa-check-circle"></i> ...</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li> -->
                 </ul>
             </div>
         </div>
