Divers ajustements concernant la responsivité, et quelques éléments débordants

--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
                             <li class="bar">
                                 <div class="info">
                                     <span>PHP</span>
-                                    <span>60%</span>
+                                    <span>85%</span>
                                 </div>
                                 <div class="line php"></div>
                             </li>
                             <li class="bar">
                                 <div class="info">
                                     <span>MySQL</span>
-                                    <span>55%</span>
+                                    <span>80%</span>
                                 </div>
                                 <div class="line mysql"></div>
                             </li>
@@ -681,8 +681,7 @@
                                 <img src="images/portfolio-images/port-img1.jpg" alt="">
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sunt 
-                                    minus nobis excepturi id repellendus assumenda vel iusto. Deleniti 
-                                    cupiditate praesentium laborum ipsa sapiente fugit consequatur minus.
+                                    minus nobis excepturi id repellendus assumenda vel iusto.
                                 </p>
                                 <ul class="visit-project-btns">
                                     <li>
@@ -711,8 +710,7 @@
                                 <img src="images/portfolio-images/port-img2.jpg" alt="">
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sunt 
-                                    minus nobis excepturi id repellendus assumenda vel iusto. Deleniti 
-                                    cupiditate praesentium laborum ipsa sapiente fugit consequatur minus.
+                                    minus nobis excepturi id repellendus assumenda vel iusto.
                                 </p>
                                 <ul class="visit-project-btns">
                                     <li>
@@ -741,8 +739,7 @@
                                 <img src="images/portfolio-images/port-img3.jpg" alt="">
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sunt 
-                                    minus nobis excepturi id repellendus assumenda vel iusto. Deleniti 
-                                    cupiditate praesentium laborum ipsa sapiente fugit consequatur minus.
+                                    minus nobis excepturi id repellendus assumenda vel iusto.
                                 </p>
                                 <ul class="visit-project-btns">
                                     <li>
@@ -866,8 +863,8 @@
         <!--=======Our Clients=======-->
         <div class="our-client sub-section">
             <div class="container flex-center">
-                <h1 class="section-title-01">Témoignages Clients</h1>
-                <h2 class="section-title-02">Témoignages Clients</h2>
+                <h1 class="section-title-01">Témoignages</h1>
+                <h2 class="section-title-02">Témoignages</h2>
                 <div class="content">
                     <div class="swiper client-swiper">
                         <div class="swiper-wrapper">
@@ -943,7 +940,7 @@
                     <h2>Vous avez un projet en tête ou besoin d'un service ? Parlons-en !</h2>
                     <ul class="contact-list">
                         <li>
-                            <h3 class="item-title"><i class="fas fa-phone"></i> Téléphone & WhatsApp</h3>
+                            <h3 class="item-title"><i class="fas fa-phone"></i> Téléphone</h3>
                             <span><a href="tel:+2290169353860">+229 01-69-35-38-60</a></span>
                         </li>
                         <li>
