--- a/index.html
+++ b/index.html
@@ -14,17 +14,6 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <!-- Start of Async Callbell Code -->
-    <!-- <script>
-        if (!window.callbellSettings) {
-        window.callbellSettings = {}
-        }
-        window.callbellSettings["token"] = "sY1qHzsUewH4gVuzG52QLaK5";
-    </script>
-    <script>
-        (function(){var w=window;var ic=w.callbell;if(typeof ic==="function"){ic('reattach_activator');ic('update',callbellSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Callbell=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://dash.callbell.eu/include/'+window.callbellSettings.token+'.js';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()
-    </script> -->
-   <!-- End of Async Callbell Code -->
 </head>
 <body>
     
@@ -1041,5 +1030,17 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 
+    <!-- Start of Async Callbell Code -->
+    <script>
+        if (!window.callbellSettings) {
+        window.callbellSettings = {}
+        }
+        window.callbellSettings["token"] = "sY1qHzsUewH4gVuzG52QLaK5";
+    </script>
+    <script>
+        (function(){var w=window;var ic=w.callbell;if(typeof ic==="function"){ic('reattach_activator');ic('update',callbellSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Callbell=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://dash.callbell.eu/include/'+window.callbellSettings.token+'.js';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+    </script>
+    <!-- End of Async Callbell Code -->
+  
 </body>
 </html>
