--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <span class="year">2024-Présent</span>
                                 <p>
                                     <span>Formation Programmation Informatique : Module Développement Mobile
-                                    (en cours)</span> - Institut des Métiers du Numériques (IMeN)
+                                    (en cours)</span> - Institut des Métiers du Numérique (IMeN)
                                 </p>
                             </li>
                             <!-- <li class="item">
