Mise à jour du portfolio (Ajout de 2 projets récents)

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                                 <img src="images/portfolio-images/project-img09_dinereserve_02.png" alt="">
                                 <p>
                                     Application web de gestion de réservation de tables pour restaurant. 
-                                    Réalisé avec Laravel, TailwindCSS et MySQL.
+                                    Réalisée avec Laravel, TailwindCSS et MySQL.
                                 </p>
                                 <ul class="visit-project-btns-1">
                                     <!-- <li>
@@ -1138,7 +1138,7 @@
             <h2 class="section-title-02">Contactez Moi</h2>
             <div class="content">
                 <div class="contact-left">
-                    <h2>Vous avez un projet en tête ou besoin d'un service ? Parlons-en !</h2>
+                    <h2>Vous avez un projet en tête ? Parlons-en !</h2>
                     <ul class="contact-list">
                         <li>
                             <h3 class="item-title"><i class="fas fa-phone"></i> Téléphone</h3>
