--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <span>Clients <br>Satisfaits</span>
                         </li> -->
                         <li class="list-item">
-                            <h3>+5</h3>
+                            <h3>+7</h3>
                             <span>Projets <br>Réussis</span>
                         </li>
                     </ul>
@@ -144,7 +144,7 @@
                                 <span class="year">2024-Présent</span>
                                 <p>
                                     <span>Formation Programmation Informatique : Module Développement Mobile
-                                    (en cours)</span> - Institut des Métiers du Numérique (IMeN)
+                                    (terminé)</span> - Institut des Métiers du Numérique (IMeN)
                                 </p>
                             </li>
                             <!-- <li class="item">
@@ -310,7 +310,7 @@
                     <div class="experience-card">
                         <div class="upper">
                             <h3>Développeur Mobile Junior</h3>
-                            <h5>Temps Plein | Auto-apprentissage et projets personnels</h5>
+                            <h5>Temps Plein | Projets personnels et académiques</h5>
                             <span>2025 - Présent</span>
                         </div>
                         <div class="hr"></div>
@@ -755,6 +755,70 @@
             <h2 class="section-title-02">Projets Réalisés</h2>
             <div class="content">
                 <div class="portfolio-list">
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>MiniStore</h3>
+                                <span>Flutter | API</span>
+                            </div>
+                            <img src="images/portfolio-images/project-img08_ministore.jpg" alt="">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>MiniStore</h3>
+                                <img src="images/portfolio-images/project-img08_ministore.jpg" alt="">
+                                <p>
+                                    Application mobile de type vitrine affichant de manière fluide un catalogue de produits. 
+                                    Conçue avec Flutter pour une interface moderne et reception de données via API.
+                                </p>
+                                <ul class="visit-project-btns-1">
+                                    <!-- <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li> -->
+                                    <li>
+                                        <a href="https://github.com/fhermas22/ministore" class="visit-btn" target="_blank">Voir le dépôt <i class="fab fa-github"></i></a>
+                                    </li>
+                                    <!-- <li>
+                                        <a href="https://github.com/fhermas22/ministore" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li> -->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>DineReserve</h3>
+                                <span>Laravel | TailwindCSS | MySQL</span>
+                            </div>
+                            <img src="images/portfolio-images/project-img09_dinereserve_02.png" alt="">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>DineReserve</h3>
+                                <img src="images/portfolio-images/project-img09_dinereserve_02.png" alt="">
+                                <p>
+                                    Application web de gestion de réservation de tables pour restaurant. 
+                                    Réalisé avec Laravel, TailwindCSS et MySQL.
+                                </p>
+                                <ul class="visit-project-btns-1">
+                                    <!-- <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li> -->
+                                    <li>
+                                        <a href="https://github.com/fhermas22/dinereserve" class="visit-btn" target="_blank">Voir le dépôt <i class="fab fa-github"></i></a>
+                                    </li>
+                                    <!-- <li>
+                                        <a href="https://github.com/fhermas22/dinereserve" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li> -->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <div class="img-card-container">
                         <div class="img-card">
                             <div class="overlay"></div>
