(amend) CV document update; Other modifications;

--- a/index.html
+++ b/index.html
@@ -871,10 +871,10 @@
                                 </p>
                                 <ul class="visit-project-btns">
                                     <li>
-                                        <a href="https://fhermas22.github.io/fexels-images-gallery/" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                        <a href="https://fhermas22.github.io/fexels/" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://github.com/fhermas22/fexels-images-gallery.git" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                        <a href="https://github.com/fhermas22/fexels.git" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
                                     </li>
                                 </ul>
                             </div>
