CV document update; Other modifications;

--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
             <h2 class="section-title-02">Contactez Moi</h2>
             <div class="content">
                 <div class="contact-left">
-                    <h2>Vous avez un projet en tête ? Parlons-en !</h2>
+                    <h2>Vous avez un projet en tête ou besoin d'un service ? Parlons-en !</h2>
                     <ul class="contact-list">
                         <li>
                             <h3 class="item-title"><i class="fas fa-phone"></i> Téléphone</h3>
